# DocGen

./: .env.example  .gitignore  BYTEROVER.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.prod  FINAL_RELEASE_STATUS.md  LICENSE  PYPI_UPLOAD_GUIDE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_COMPLETION_REPORT.md  RELEASE_COMPLETION_SUMMARY.md  RELEASE_NOTES.md  RELEASE_SUMMARY.md  docgen_cli.py  docker-compose.yml  pyproject.toml  pytest.ini  release_v1.0.0.py  requirements.txt  test_cli.py  upload_to_pypi.py
.cursor/commands/: COMMANDS_SUMMARY.md  continue.md  development-workflow.md  driven-workflow-commands.md  project-management.md  quality-assurance.md  quick-reference.md  spec-driven-dev.md  spec-driven-development-commands.md
.cursor/rules/: .rules  derived-cursor-rules.mdc  docgen-project-rules.mdc  file-organization-rules.md  folder-cleanup-rules.mdc  mcp-browser-automation-rules.mdc  mcp-development-automation-rules.mdc  mcp-integration-rules.mdc  mcp-knowledge-docs-rules.mdc  mcp-master-rules.mdc  mcp-project-management-rules.mdc  mcp-testing-qa-rules.mdc  project-file-organization.mdc  root-organization-rules.mdc
.github/workflows/: ci-cd.yml  ci.yml  release.yml
.specstory/: .gitignore
.specstory/history/: 2025-09-19_08-57Z-docgen-cli-development-roadmap.md  2025-09-19_09-17Z-phase-2-discussion.md  2025-09-19_09-23Z-docgen-cli-mvp-ready-for-production.md  2025-09-19_10-20Z-project-directory-structure-overview.md  2025-09-19_10-30Z-create-cursor-commands-for-development-plan.md  2025-09-19_10-47Z-organize-project-files.md  2025-09-19_11-02Z-generate-a-name-for-the-chat.md  2025-09-19_11-03Z-update-and-streamline-project-rules.md  2025-09-19_11-16Z-folders-generated-docs-and-generated-are-identical.md  2025-09-19_11-17Z-move-all-project-folders-into-one.md  2025-09-19_11-26Z-fixing-and-updating-rules.md  2025-09-19_11-31Z-review-and-fix-development-workflow-issues.md  2025-09-19_11-33Z-update-readme-with-latest-folder-structure.md  2025-09-19_11-42Z-understanding-and-applying-mcp-in-development.md  2025-09-19_11-47Z-add-cursor-rules-for-code-comments.md  2025-09-19_11-55Z-importance-of-pyproject-toml-and-requirements-txt.md  2025-09-19_11-59Z-update-or-add-files-for-workflow-improvement.md  2025-09-19_11-59Z-update-or-add-files-for-workflow.md  2025-09-19_13-03Z-review-specifications-for-enhanced-workflow.md  2025-09-19_13-06Z-using-mcp-integration-patterns-for-development.md  2025-09-19_13-07Z-configure-testaprit-backend-settings.md  2025-09-19_13-16Z-change-folder-name-to-assets.md  2025-09-19_13-23Z-delete-unwanted-scripts-and-keep-important-ones.md  2025-09-19_14-10Z-organizing-the-control-panel-folder.md  2025-09-19_14-19Z-review-and-organize-asset-files.md  2025-09-19_14-30Z-generate-a-name-for-the-chat.md  2025-09-19_14-51Z-return-file-to-root-and-merge.md  2025-09-19_15-08Z-move-folders-and-check-updates.md  2025-09-19_15-15Z-fix-the-issue.md  2025-09-19_15-17Z-update-references-in-all-files.md  2025-09-19_15-27Z-discussing-project-directory-structure.md  2025-09-19_15-54Z-update-structure.md  2025-09-19_15-58Z-ensure-development-follows-kiro-workflow.md  2025-09-19_16-21Z-minor-linting-errors-discussion.md  2025-09-19_16-36Z-add-command-to-continue.md  2025-09-19_16-39Z-change-kiro-to-driven-in-documents.md  2025-09-19_16-41Z-implement-core-project-management-commands.md  2025-09-19_17-02Z-update-all-documents.md  2025-09-19_17-04Z-functional-requirements-overview.md  2025-09-19_17-09Z-complete-high-priority-mcp-integration.md  (+29 more)
.testsprite/: README.md  code_summary.json
assets/management/: ANALYSIS.md  CHECKLIST.md  DASHBOARD.md  PLAN.md  README.md  RENAME.md  START.md  STATUS.md  TASKS.md  TRACKING.md
assets/reports/: README.md  comprehensive-browser-automation-summary.md  issue-tracking.md  (+15 more)
src/: cli-main.py  generate-docs.py  init.py  main.py
tests/: README.md  conftest.py  init.py
(+182 files in other folders)
